--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-calendar": "^4.6.0",
     "react-dom": "^18.2.0",
+    "react-image-crop": "^10.1.8",
     "react-modal": "^3.16.1",
     "react-razorpay": "^2.0.1",
     "react-redux": "^8.1.2",
