--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.15",
     "axios": "^1.4.0",
+    "flowbite-react": "^0.6.1",
     "postcss": "^8.4.28",
     "react": "^18.2.0",
     "react-calendar": "^4.6.0",
