--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "^10.4.15",
     "axios": "^1.4.0",
     "flowbite-react": "^0.6.1",
+    "jwt-decode": "^3.1.2",
     "postcss": "^8.4.28",
     "react": "^18.2.0",
     "react-calendar": "^4.6.0",
