--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-calendar": "^4.6.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-image-crop": "^10.1.8",
     "react-js-pagination": "^3.0.3",
     "react-modal": "^3.16.1",
